--- a/assets/style.css
+++ b/assets/style.css
@@ -1,6 +1,6 @@
 :root {
-    --text-color: #f1f1f1;
-    --card-front-color: #0e6cdf;
+    --text-color: #e4a1a1;
+    --card-front-color: #006ef5;
     --card-back-color: #ce0f0f;
 }
 
@@ -82,15 +82,15 @@
 
 .cartao_conteudo_resposta {
     transform: rotateY(180deg);
-    background-color:#609be4 ;
-    background-color: rgba(2, 228, 2, 0.2);
+    background-color:#58a0f7 ;
+    background-color: rgba(3, 160, 3, 0.582);
     border: 4px solid var(--card-back-color);
 }
  
 
 footer {
     background-color: black;
-    color: white;
+    color: rgb(243, 243, 243);
     bottom: 0;
     position: fixed;
     width: 100%;
