--- a/assets/style.css
+++ b/assets/style.css
@@ -6,7 +6,7 @@
 
 
    body {
-    background: url("https://www.google.com/url?sa=i&url=https%3A%2F%2Fpt.pngtree.com%2Ffreebackground%2Fred-white-spiky-abstract-background_2712583.html&psig=AOvVaw2_6mhO83TTUXGXzB2oj6gw&ust=1751156224775000&source=images&cd=vfe&opi=89978449&ved=0CBQQjRxqFwoTCICc2Lrrko4DFQAAAAAdAAAAABAp");
+    background: color #6797d1;
     font-family: bai janjuree;
 }
 
